chore: 1.20.6